# audio_lightbar_obs_plugin

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: audio-lightbar.c
